# dominofit-solver

./: README.md  pyproject.toml
source/: main.py  models.py  solver.py
